--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,30 +13,30 @@
                 <div class="dropdown-content" *ngIf="isDropdownOpen">
                   <div class="specialties-list">
                     <ul>
-                      <li (click)="goToSpecialty('obsterics-and-gynecology')" (mouseenter)="onHover('obstetrics')" (mouseleave)="onLeave()"><img class="dot" src="../../assets/dot.svg">Obstetrics & Gynaecology</li>
-                      <li (click)="goToSpecialty('surgery')" (mouseenter)="onHover('gastrosurgery')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Gastrosurgery</li>
-                      <li (click)="goToSpecialty('pediatrics')"(mouseenter)="onHover('pediatrician')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Paediatrics</li>
-                      <li (click)="goToSpecialty('endocrine-surgery')"(mouseenter)="onHover('endocrine')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Endocrinology</li>
-                      <li (click)="goToSpecialty('vascular-surgery')"(mouseenter)="onHover('vascular')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Vascular Surgeries</li>
-                      <li (click)="goToSpecialty('orthopedic')"(mouseenter)="onHover('orthopedic')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Orthopedic</li>
-                      <li (click)="goToSpecialty('general-physician')"(mouseenter)="onHover('general_physician')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">General Physician</li>
+                      <li (click)="goToSpecialty('best-obsterics-and-gynecology-hospital-in-bangalore')" (mouseenter)="onHover('obstetrics')" (mouseleave)="onLeave()"><img class="dot" src="../../assets/dot.svg">Obstetrics & Gynaecology</li>
+                      <li (click)="goToSpecialty('best-gastroenterology-hospital-in-bangalore')" (mouseenter)="onHover('gastrosurgery')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Gastrosurgery</li>
+                      <li (click)="goToSpecialty('best-pediatrics-hospital-in-bangalore')"(mouseenter)="onHover('pediatrician')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Paediatrics</li>
+                      <li (click)="goToSpecialty('best-endocrine-surgery-in-baqngalore')"(mouseenter)="onHover('endocrine')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Endocrinology</li>
+                      <li (click)="goToSpecialty('best-vascular-surgery-hospital-in-bangalore')"(mouseenter)="onHover('vascular')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Vascular Surgeries</li>
+                      <li (click)="goToSpecialty('best-orthopedic-hospital-in-bangalore')"(mouseenter)="onHover('orthopedic')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Orthopedic</li>
+                      <li (click)="goToSpecialty('best-general-physician-in-bangalore')"(mouseenter)="onHover('general_physician')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">General Physician</li>
                     </ul>
                     <ul>
-                      <li (click)="goToSpecialty('dermatology')"(mouseenter)="onHover('dermatology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Dermatology</li>
-                      <li (click)="goToSpecialty('urology')"(mouseenter)="onHover('urology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Urology</li>
-                      <li (click)="goToSpecialty('radiology')"(mouseenter)="onHover('radiology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Radiology</li>
-                      <li (click)="goToSpecialty('nephrology')"(mouseenter)="onHover('nephrology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Nephrology</li>
-                      <li (click)="goToSpecialty('physiotherapy')"(mouseenter)="onHover('physiotherapy')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Physiotherapy</li>
-                      <li (click)="goToSpecialty('anesthesia')"(mouseenter)="onHover('anesthesia')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Anesthesia</li>
-                      <li (click)="goToSpecialty('cardiology')"(mouseenter)="onHover('cardiology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Cardiology</li>
+                      <li (click)="goToSpecialty('best-dermatology-hospital-in-bangalore')"(mouseenter)="onHover('dermatology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Dermatology</li>
+                      <li (click)="goToSpecialty('best-urology-hospital-in-bangalore')"(mouseenter)="onHover('urology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Urology</li>
+                      <li (click)="goToSpecialty('best-radiology-hospital-in-bangalore')"(mouseenter)="onHover('radiology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Radiology</li>
+                      <li (click)="goToSpecialty('best-nephrology-hospital-in-bangalore')"(mouseenter)="onHover('nephrology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Nephrology</li>
+                      <li (click)="goToSpecialty('best-physiotherapy-hospital-in-bangalore')"(mouseenter)="onHover('physiotherapy')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Physiotherapy</li>
+                      <li (click)="goToSpecialty('best-anesthesia-hospital-in-bangalore')"(mouseenter)="onHover('anesthesia')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Anesthesia</li>
+                      <li (click)="goToSpecialty('best-cardiology-hospital-in-bangalore')"(mouseenter)="onHover('cardiology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Cardiology</li>
                     </ul>
                     <!-- Third column with ENT, Oncology, Neurology, and image -->
           <div class="third-column">
             <ul>
-              <li (click)="goToSpecialty('ent')"(mouseenter)="onHover('ent')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">ENT</li>
-              <li (click)="goToSpecialty('oncology')"(mouseenter)="onHover('oncology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Oncology and Onco Surgery</li>
-              <li (click)="goToSpecialty('neurology')"(mouseenter)="onHover('neurology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Neurology</li>
-              <li (click)="goToSpecialty('psychiatry')"(mouseenter)="onHover('physciatry')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Psychiatry</li>
+              <li (click)="goToSpecialty('best-ent-hospital-in-bangalore')"(mouseenter)="onHover('ent')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">ENT</li>
+              <li (click)="goToSpecialty('best-oncology-hospital-in-bangalore')"(mouseenter)="onHover('oncology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Oncology and Onco Surgery</li>
+              <li (click)="goToSpecialty('best-neurology-hospital-in-bangalore')"(mouseenter)="onHover('neurology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Neurology</li>
+              <li (click)="goToSpecialty('best-psychiatric-hospital-in-bangalore')"(mouseenter)="onHover('physciatry')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Psychiatry</li>
             </ul>
 
             <!-- Image at the bottom of the third column -->
