--- a/src/app/obstetrics/obstetrics.component.html
+++ b/src/app/obstetrics/obstetrics.component.html
@@ -31,8 +31,8 @@
 
     <div class="container_2">
         <div class="container_2_content">
-            <div class="container_2_heading">High-Risk Pregnancy Care</div>
-            <div class="container_2_para">High-risk pregnancies are pregnancies that have the chance of developing complications for both mother and child. People who are underweight or overweight, younger than 18 or older than 35, anemic, into their 5th pregnancy or more; have had previous preterm births, had given births to a large or small baby, had a previous pregnancy loss, history of genetic disease, substance abuse, previous cases of twins or triplets, taken infertility medications, or have medical conditions like high BP, heart disease, etc. have a high chance of high-risk pregnancies. High-risk pregnancy care includes prenatal care and diagnostics, assessment and treatment of fetal disease, co-management with a community-based obstetrician, ambulatory and inpatient consult, genetic counseling, ultrasound, fetal surveillance, support group, social services, nutrition counseling, etc.</div>
+            <div class="container_2_heading">The Best Maternity Hospital in Jayanagar Bangalore</div>
+            <div class="container_2_para">When it comes to gynecology and maternity care, Aksha Hospital is recognized as the Best Maternity Hospital in Jayanagar Bangalore and one of the Best Gynecology Hospitals in Jayanagar Bangalore. Our commitment to providing comprehensive care for women’s health makes us a trusted name in the region. Whether it’s maternity care in Bangalore, high-risk pregnancy support, or female infertility treatment, Aksha Hospital offers world-class services with a team of experienced and skilled gynecologists.</div>
         </div>
         <div class="container_2_image">
             <img src="../../assets/specialiti/obstetrics_container_2_img.png" alt="">
@@ -53,6 +53,25 @@
         </div>
         <div class="container_3_img">
             <img src="../../assets/specialiti/container_3_img_2.png" alt="">
+        </div>
+    </div>
+
+    <!-- new container -->
+    <h2 style="padding: 0 8%; margin: 0; text-align: center;" class="container_2_heading">Comprehensive Services at the Best Gynecology Hospital in Jayanagar Bangalore</h2>
+    <div class="container_2">
+        <div class="container_2_content">
+            <div class="container_2_para"><b>Maternal Care and Checkups</b></div>
+            <div class="container_2_para para_margin">As the Best Maternity Hospital in Jayanagar Bangalore, we focus on providing comprehensive maternal care checkups during pregnancy, labor, and postpartum. Our team of highly qualified pregnancy doctors ensures safe and healthy outcomes for both mother and baby, making us a preferred choice for pregnancy care in Bangalore.</div>
+            <div class="container_2_para subheading_margin"><b>High-Risk Pregnancy Support</b></div>
+            <div class="container_2_para para_margin">High-risk pregnancies require expert care, and Aksha Hospital, the Best Maternity Hospital in Jayanagar Bangalore, excels in providing support for complex cases. With specialized services like prenatal care, fetal surveillance, and genetic counseling, our highly qualified gynecologists in Jayanagar Bangalore ensure the safety of both mother and child.</div>
+            <div class="container_2_para subheading_margin"><b>Affordable Maternity Packages in Jayanagar Bangalore</b></div>
+            <div class="container_2_para para_margin">We are known for offering affordable maternity packages in Jayanagar Bangalore, ensuring that exceptional care is accessible to all. As the Best Maternity Hospital in Jayanagar Bangalore, we combine quality services with affordability, making us the first choice for expecting mothers.</div>
+            <div class="container_2_para subheading_margin"><b>Female Infertility Treatment</b></div>
+            <div class="container_2_para para_margin">As one of the Best Gynecology Hospitals in Jayanagar Bangalore, we specialize in advanced female infertility treatments, offering options such as fertility drugs, surgical interventions, and assistive reproductive technologies (ART). Our expert gynecologists in Bangalore are dedicated to helping couples achieve their dreams of parenthood.</div>
+            <div class="container_2_para subheading_margin"><b>Laparoscopic Surgery</b></div>
+            <div class="container_2_para para_margin">Known as the Best Gynecology Hospital in Jayanagar Bangalore, Aksha Hospital offers basic and advanced laparoscopic surgeries for various gynecological conditions. These minimally invasive procedures are performed by experienced and skilled gynecologists, ensuring faster recovery and minimal scarring.</div>
+            <div class="container_2_para subheading_margin"><b>Cervical Cerclage and Hysterectomy</b></div>
+            <div class="container_2_para para_margin">Our specialists provide treatments such as cervical cerclage for preventing preterm labor and abdominal and vaginal hysterectomies for managing gynecological conditions. With state-of-the-art technology, we uphold our reputation as the Best Gynecology Hospital in Jayanagar Bangalore.</div>
         </div>
     </div>
 
@@ -81,16 +100,41 @@
         </div>
     </div>
 
+    <!-- new container -->
+     <h2 style="padding: 0 8%; margin: 0; text-align: center;margin-top: 30px;" class="container_2_heading">Why Aksha Hospital is the Best Maternity Hospital in Jayanagar Bangalore</h2>
+     <div class="container_2">
+        <div class="container_2_new_image">
+            <img src="../../assets/best-gynaecology-hospital-in-jayanagar-bangalore.png" alt="">
+        </div>
+        <div class="container_2_content">
+            <ol>
+                <li class="container_2_para">Highly Qualified Gynecologists: Our team, led by Dr. Madhuri Sumanth, ensures exceptional care for women’s health, establishing us as the Best Gynecology Hospital in Jayanagar Bangalore.</li>
+                <li class="container_2_para para_margin">Advanced Care for High-Risk Pregnancy: With expertise in managing complex cases, we are a trusted name for high-risk pregnancy support in Bangalore.</li>
+                <li class="container_2_para para_margin">Affordable Pregnancy Packages: We offer affordable pregnancy packages in Bangalore, making quality maternity care accessible to all.</li>
+                <li class="container_2_para para_margin">Comprehensive Neonatal Care: Our neonatal specialists in Bangalore ensure the best outcomes for newborns, further enhancing our position as the Best Maternity Hospital in Jayanagar Bangalore.</li>
+                <li class="container_2_para para_margin">Focus on Women’s Health: From pregnancy counseling to female infertility treatment, we are committed to being a leader in women’s health care.</li>
+            </ol>
+        </div>
+     </div>
+
     <!-- container 5 -->
 
     <div class="container_5">
         <div class="container_5_content">
-            <div class="container_5_heading">Hysterectomy (Abdominal/Vaginal)</div>
-            <div class="container_5_para">Vaginal hysterectomy is a procedure where the uterus is removed through the vagina rather than making an incision. In this procedure, the surgeon detaches the uterus from the ovaries and fallopian tubes, connecting blood vessels and other parts that it is connected to, and then carefully removes it from the body through the vagina. Abdominal hysterectomy is a process where the uterus is removed from our body through an incision made on the lower abdomen. It could be partial—only the uterus removed—or total—both the uterus and cervix are removed.</div>
+            <div class="container_5_heading">Trust Aksha Hospital for Exceptional Gynecology and Maternity Care</div>
+            <div class="container_5_para">Aksha Hospital is proud to be recognized as the Best Maternity Hospital in Jayanagar Bangalore and one of the Best Gynecology Hospitals in Jayanagar Bangalore. With services tailored to meet the unique needs of every woman, we ensure compassionate and affordable care. For expert care from highly qualified gynecologists in Jayanagar Bangalore, visit Aksha Hospital today.</div>
         </div>
         <div class="container_5_image">
             <img src="../../assets/specialiti/container_5_img.png" alt="">
         </div>
     </div>
+
+    <!-- faq -->
+     <div class="faq">
+        <h2 style="padding: 0 8%; margin: 0 0 30px 0; text-align: center;" class="container_2_heading">FAQs</h2>
+        <div class="container_6" *ngFor="let faq of faqs; let i = index">
+          <app-faq [question]="faq.ques" [answer]="faq.ans" [quesNum]="i+1" />
+        </div>
+     </div>
 
 </div>
